--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,4 +16,4 @@ repos:
         name: Run pytest
         entry: pytest ./tests
         language: system
-        types: [python]
+        pass_filenames: false
